--- a/src/app/core/programs/programs.component.html
+++ b/src/app/core/programs/programs.component.html
@@ -8,88 +8,18 @@
                     </label>
                 </div>
                <div class="all-form">
-                <div class="upcoming-b">
-                    <label class="program-filter-label">Price</label>
-                    <div class="">
+                <div class="upcoming-b" *ngFor="let label of filtered_data; let i=index">
+                    <label class="program-filter-label">{{label.title}}</label>
+                    <div *ngFor="let checkbox_title of label[label.key]">
                         <label class="form-check-label">
                             <input type="checkbox" class="">
-                            Free 
+                            {{checkbox_title.name}} 
                         </label>
                     </div>
                 </div>
 
-                <div class="upcoming-b">
-                    <label class="program-filter-label">Delivery Type</label>
-                    <div class="">
-                        <label class="form-check-label mb-1">
-                            <input type="checkbox" class="mr-2">
-                             Recorded 
-                        </label>
-                    </div>
-
-                </div>
-                <div class="upcoming-b">
-                    <label class="program-filter-label">Level</label>
-                    <div class="">
-                        <label class="form-check-label mb-1">
-                            <input type="checkbox" class="mr-2">
-                             Basic 
-                        </label>
-                    </div>
-                </div>
-
-                <div class="upcoming-b">
-                    <label class="program-filter-label">Duration</label>
-                    <div class="">
-                        <label class="form-check-label mb-1">
-                            <input type="checkbox" class="mr-2">
-                             0-5 Hours 
-                        </label>
-                    </div>
-                    <div class="">
-                        <label class="form-check-label mb-1">
-                            <input type="checkbox" class="mr-2">
-                             5-10 Hours 
-                        </label>
-                    </div>
-                </div>
-
-                <div class="upcoming-b">
-                    <label class="program-filter-label">Language</label>
-                    <div class="">
-                        <label class="form-check-label mb-1">
-                            <input type="checkbox" class="mr-2">
-                             English 
-                        </label>
-                    </div>
-                    <div class="">
-                        <label class="form-check-label mb-1">
-                            <input type="checkbox" class="mr-2">
-                             Hindi 
-                        </label>
-                    </div>
-                </div>
-
-                <div class="upcoming-b">
-                    <label class="program-filter-label">Category</label>
-                    <div class="">
-                        <label class="form-check-label">
-                            <input type="checkbox" class="">
-                             Personal_Development 
-                        </label>
-                    </div>
-                    <div class="">
-                        <label class="form-check-label">
-                            <input type="checkbox" class="">
-                             Professional_Development 
-                        </label>
-                    </div>         
-                    <div class="program-filter-label mt-3"> See More + </div>
-                 
-                </div>
                </div>
             </div>
-
         </div>
         <div class="programs">
             <div class="programList-right">
@@ -97,115 +27,113 @@
                     <h2>Programs</h2>
                     <div>
                         <select class="" >
-                            <option selected>Open this select menu</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
+                            <option selected>Old to New</option>
+                            <option value="1">High to Low</option>
+                            <option value="2">Low to High</option>
+                            <option value="3">New to Old</option>
                           </select>
-                    </div>
-    
+                    </div>    
                 </div>
         
-               <div class="banner-container">
-              <div class="outer-banner">
-                <div class="banner">
-                    <div class="d-flex align-items-center">
-                        <div class=" program-language-label"> English &amp; Hindi</div>
-                    </div>
-                    <div class="image-type">
-                        <div class="image">
-                            <img src="https://s3.ap-south-1.amazonaws.com/skillspire.production/storage/Program/2022/February/1924350278/16437814651280516703.png"
-                                alt="skillspire banner" class="images" />
-                        </div>
-                        <div class="program-type">
-                            <button class="btn btn-primary right-btn">programLists</button>
-                        </div>
-                    </div>
+                <div class="banner-container" *ngFor=" let program of programs_data">
+                    <div class="outer-banner">
+                        <div class="banner">
+                            <div class="d-flex align-items-center">
+                                <div class=" program-language-label">{{program.prog_languages}}</div>
+                            </div>
+                            <div class="image-type">
+                                <div class="image">
+                                    <img [src]="program.photo"
+                                        alt="skillspire banner" class="images" />
+                                </div>
+                                <div class="program-type">
+                                    <button class="btn btn-primary right-btn">{{program.program_type}}</button>
+                                </div>
+                            </div>
 
-                    <div class="short-desc">
-                        <div class="Recorded">
-                            <div class="circle"></div>
-                            <div>
-                                <h5>Recorded</h5>
+                            <div class="short-desc">
+                                <div class="Recorded">
+                                    <div class="circle"></div>
+                                    <div>
+                                        <h5>Recorded</h5>
+                                    </div>
+                                </div>
+                                <div class="goal">
+                                    <h2>{{program.title}}</h2>
+                                    <p>{{program.short_desc}}</p>
+                                </div>
+
+                                <div class="time">
+                                    <img src="../../../assets/images/clock.png" alt="">
+                                    <p>hours_split <span>Hour</span> minutes_split <span>Minutes</span></p>
+                                </div>
+                            </div>
+                            <div class="price">
+                                <p class="discount-fees">₹ {{program.discounted_fees}}</p>
+                                <p class="fees">₹<del>{{program.fees}}</del> </p>
+                            </div>
+                            <div class="tutor">
+                                <div class="tutor-image">
+                                    <img [src]="program.trainerData.photo"
+                                        alt="">
+                                </div>
+                                <div class="tutor-details">
+                                    <p class="name">{{program.trainerData.name}}</p>
+                                    <p class="exp">Experience: {{program.trainerData.industry_exp}}</p>
+                                </div>
                             </div>
                         </div>
-                        <div class="goal">
-                            <h2>Understanding GST</h2>
-                            <p>The Goods &amp; Service
-                                Tax Act was successfully implemented from 1st July 2017. Al......</p>
-                        </div>
-
-                        <div class="time">
-                            <img src="../../../assets/images/clock.png" alt="">
-                            <p>hours_split <span>Hour</span> minutes_split <span>Minutes</span></p>
-                        </div>
-                    </div>
-                    <div class="price">
-                        <p class="discount-fees">₹this.programLists[index].discounted_fees</p>
-                        <p class="fees">₹<del>this.programLists[index].fees</del> </p>
-                    </div>
-                    <div class="tutor">
-                        <div class="tutor-image">
-                            <img src="https://s3.ap-south-1.amazonaws.com/skillspire.production/storage/2021/July/week4/1569_a549dcf4540d8347a0fa2a16e4cc9773.png"
-                                alt="">
-                        </div>
-                        <div class="tutor-details">
-                            <p class="name">programLists[index].trainerData.name</p>
-                            <p class="exp">Experience: programLists[index].trainerData.industry_exp</p>
-                        </div>
-                    </div>
-                </div>
-              </div>
-
-               <div class="outer-banner">
-                <div class="banner">
-                    <div class="d-flex align-items-center">
-                        <div class=" program-language-label"> English &amp; Hindi</div>
-                    </div>
-                    <div class="image-type">
-                        <div class="image">
-                            <img src="https://s3.ap-south-1.amazonaws.com/skillspire.production/storage/Program/2022/February/1924350278/16437814651280516703.png"
-                                alt="skillspire banner" class="images" />
-                        </div>
-                        <div class="program-type">
-                            <button class="btn btn-primary right-btn">programLists</button>
-                        </div>
                     </div>
 
-                    <div class="short-desc">
-                        <div class="Recorded">
-                            <div class="circle"></div>
-                            <div>
-                                <h5>Recorded</h5>
+                    <!-- <div class="outer-banner">
+                        <div class="banner">
+                            <div class="d-flex align-items-center">
+                                <div class=" program-language-label"> English &amp; Hindi</div>
+                            </div>
+                            <div class="image-type">
+                                <div class="image">
+                                    <img src="https://s3.ap-south-1.amazonaws.com/skillspire.production/storage/Program/2022/February/1924350278/16437814651280516703.png"
+                                        alt="skillspire banner" class="images" />
+                                </div>
+                                <div class="program-type">
+                                    <button class="btn btn-primary right-btn">programLists</button>
+                                </div>
+                            </div>
+
+                            <div class="short-desc">
+                                <div class="Recorded">
+                                    <div class="circle"></div>
+                                    <div>
+                                        <h5>Recorded</h5>
+                                    </div>
+                                </div>
+                                <div class="goal">
+                                    <h2>Understanding GST</h2>
+                                    <p>The Goods &amp; Service
+                                        Tax Act was successfully implemented from 1st July 2017. Al......</p>
+                                </div>
+
+                                <div class="time">
+                                    <img src="../../../assets/images/clock.png" alt="">
+                                    <p>hours_split <span>Hour</span> minutes_split <span>Minutes</span></p>
+                                </div>
+                            </div>
+                            <div class="price">
+                                <p class="discount-fees">₹this.programLists[index].discounted_fees</p>
+                                <p class="fees">₹<del>this.programLists[index].fees</del> </p>
+                            </div>
+                            <div class="tutor">
+                                <div class="tutor-image">
+                                    <img src="https://s3.ap-south-1.amazonaws.com/skillspire.production/storage/2021/July/week4/1569_a549dcf4540d8347a0fa2a16e4cc9773.png"
+                                        alt="">
+                                </div>
+                                <div class="tutor-details">
+                                    <p class="name">programLists[index].trainerData.name</p>
+                                    <p class="exp">Experience: programLists[index].trainerData.industry_exp</p>
+                                </div>
                             </div>
                         </div>
-                        <div class="goal">
-                            <h2>Understanding GST</h2>
-                            <p>The Goods &amp; Service
-                                Tax Act was successfully implemented from 1st July 2017. Al......</p>
-                        </div>
-
-                        <div class="time">
-                            <img src="../../../assets/images/clock.png" alt="">
-                            <p>hours_split <span>Hour</span> minutes_split <span>Minutes</span></p>
-                        </div>
-                    </div>
-                    <div class="price">
-                        <p class="discount-fees">₹this.programLists[index].discounted_fees</p>
-                        <p class="fees">₹<del>this.programLists[index].fees</del> </p>
-                    </div>
-                    <div class="tutor">
-                        <div class="tutor-image">
-                            <img src="https://s3.ap-south-1.amazonaws.com/skillspire.production/storage/2021/July/week4/1569_a549dcf4540d8347a0fa2a16e4cc9773.png"
-                                alt="">
-                        </div>
-                        <div class="tutor-details">
-                            <p class="name">programLists[index].trainerData.name</p>
-                            <p class="exp">Experience: programLists[index].trainerData.industry_exp</p>
-                        </div>
-                    </div>
-                </div>
-               </div>
+                    </div> -->
                </div>
 
 
