--- a/src/app/core/programs/programs.component.scss
+++ b/src/app/core/programs/programs.component.scss
@@ -74,7 +74,9 @@ cursor: pointer;
   padding: 10px;
   width: 333px;
   height: auto;
-
+};
+.programList-right .banner:hover{
+  border: 1px solid #00b6f0;
 };
 .program-language-label{
   background-color:#13b3e9;
