--- a/src/app/core/programs/programs.component.html
+++ b/src/app/core/programs/programs.component.html
@@ -1,50 +1,51 @@
 <section class="course-page">
     <div class="container">
         <div class="reset-all">
-            <div class="course-list-border program-filter d-flex flex-column flex-shrink-0 overflow-auto sidebar-container pt-0 sidebar-expanded">
-                <div class="d-flex justify-content-end">
-                    <label class="program-filter-label program-filter-icon mr-3"
-                        style="cursor: pointer;"><u>Reset All</u>
-                    </label>
-                </div>
-               <div class="all-form">
-                <div class="upcoming-b" *ngFor="let label of filtered_data; let i=index">
-                    <label class="program-filter-label">{{label.title}}</label>
-                    <div *ngFor="let checkbox_title of label[label.key]">
-                        <label class="form-check-label">
-                            <input type="checkbox" class="">
-                            {{checkbox_title.name}} 
-                        </label>
+            <div
+                class="course-list-border program-filter d-flex flex-column flex-shrink-0 overflow-auto sidebar-container pt-0 sidebar-expanded">
+                <form [formGroup]="form_skill">
+                    <div class="d-flex justify-content-end">
+                        <label class="program-filter-label"><u (click)="reset()">Reset All</u></label>
                     </div>
-                </div>
-
-               </div>
-            </div>
+                    <div class="all-form">
+                        <div class="upcoming-b" *ngFor="let label of filtered_data; let i=index">
+                            <label class="program-filter-label">{{label.title}}</label>
+                            <div *ngFor="let checkbox_title of label[label.key]; let j=index">
+                                <label for="check" class="form-check-label">
+                                    <input id="check" type="checkbox"  formArrayName="selected_programs" [checked]="checkbox_title.checked"
+                                        [value]="checkbox_title.slug" (change)="onChecked_Skill($event,label.key)">
+                                    {{checkbox_title.name}} {{checkbox_title.checked}}
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div> 
+            <!-- [checked]="checkboxStates[label.key][j]"-->
         </div>
         <div class="programs">
             <div class="programList-right">
                 <div class="filter-course">
                     <h2>Programs</h2>
                     <div>
-                        <select class="" >
-                            <option selected>Old to New</option>
-                            <option value="1">High to Low</option>
-                            <option value="2">Low to High</option>
-                            <option value="3">New to Old</option>
-                          </select>
-                    </div>    
+                        <select class="" (change)="onSelectFilter($event)">
+                            <option selected value="start_date">Old to New</option>
+                            <option value="reverse:fees">High to Low</option>
+                            <option value="fees">Low to High</option>
+                            <option value="reverse:start_date">New to Old</option>
+                        </select>
+                    </div>
                 </div>
-        
+
                 <div class="banner-container" *ngFor=" let program of programs_data">
-                    <div class="outer-banner">
+                    <div class="outer-banner" (click)="goToCourseDetails(program.slug)">
                         <div class="banner">
                             <div class="d-flex align-items-center">
                                 <div class=" program-language-label">{{program.prog_languages}}</div>
                             </div>
                             <div class="image-type">
                                 <div class="image">
-                                    <img [src]="program.photo"
-                                        alt="skillspire banner" class="images" />
+                                    <img [src]="program.photo" alt="skillspire banner" class="images" />
                                 </div>
                                 <div class="program-type">
                                     <button class="btn btn-primary right-btn">{{program.program_type}}</button>
@@ -74,8 +75,7 @@
                             </div>
                             <div class="tutor">
                                 <div class="tutor-image">
-                                    <img [src]="program.trainerData.photo"
-                                        alt="">
+                                    <img [src]="program.trainerData.photo" alt="">
                                 </div>
                                 <div class="tutor-details">
                                     <p class="name">{{program.trainerData.name}}</p>
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                     </div> -->
-               </div>
+                </div>
 
 
             </div>
